--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,17 @@
-<h1>Sample App</h1>
-<p>This is the home page for the <a href="http://railstutorial.org/">Ruby on rails tutorial</a> sample application.</p>
-	
+<div class="center hero-unit">
+	<h1>Sample App</h1>
+
+	<h2>
+		This is the home page for the
+		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
+	</h2>
+
+	<%= link_to "sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+
+	<%= link_to image_tag("rails.png", alt: "rails"), 'http://rubyonrails.org/' %>
+
+
+
+
+
 
